further settings around benchmarking