@@ -5,6 +5,7 @@ CONFIG_FILE=$1
 LOG_DIR=$2
 PARASIM_VERSION=`grep "<version>" "$SELF_DIR/pom.xml" | head -n 1 | tr -d ' ' | sed 's/<version>//g' | sed 's/<\/version>//g'`
 TARGET_DIST=$SELF_DIR/application/target/parasim-${PARASIM_VERSION}-dist.jar
+JAVA_OPT="-Xmx4096m -XX:MaxPermSize=2048m"
 
 usage()
 {
@@ -29,7 +30,7 @@ if [ -z $LOG_DIR ]; then
 fi
 
 for IP in `grep "<value>" $CONFIG_FILE | tr '<>' ' ' | awk '{ print $2 }'`; do
-	nohup ssh $IP -t "java -Dparasim.remote.host=$IP -jar $TARGET_DIST -s -c $CONFIG_FILE" > "$LOG_DIR/log-$IP" &
+	nohup ssh $IP -t "java $JAVA_OPT -Dparasim.remote.host=$IP -jar $TARGET_DIST -s -c $CONFIG_FILE" > "$LOG_DIR/log-$IP" &
 	sleep 1
 	echo "server $IP started";
 done
